...
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="sj0-Os-402"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Recommanded Channels" id="Nnj-SR-kEe">
                        <barButtonItem key="rightBarButtonItem" style="done" id="MsJ-xI-Fl1">
                            <view key="customView" contentMode="scaleToFill" id="V2t-g5-Ur9">
                                <rect key="frame" x="332" y="8.5" width="27" height="27"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lK5-bC-OPP" userLabel="Search">
                                        <rect key="frame" x="0.0" y="0.0" width="27" height="27"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" image="icon_search">
                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
            </objects>
            <point key="canvasLocation" x="2362" y="462"/>
        </scene>
        <!--Search Videos-->
        <scene sceneID="UJh-eS-po5">
            <objects>
                <viewController title="Search Videos" id="fcj-pg-2WY" customClass="NCSearchViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="YvF-eE-ZRw"/>
                        <viewControllerLayoutGuide type="bottom" id="Y2o-ly-vh0"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="2C5-FG-bL9">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
